JFR - nmetods - misspelled in several places

XMLWordPrintable

    • jfr
    • b21

        I noticed "nmetods" is misspelled like that in the jfr stats and also in the ./src/hotspot/share/jfr/periodic/jfrPeriodic.cpp and in ./src/hotspot/share/jfr/metadata/metadata.xml, for example jdk.CompilerStatistics {
         startTime = 21:15:29.797
         compileCount = 3460
         bailoutCount = 5
         invalidatedCount = 0
         osrCompileCount = 50
         standardCompileCount = 3410
         osrBytesCompiled = 0 bytes
         standardBytesCompiled = 0 bytes
         nmetodsSize = 6.9 MB
         nmetodCodeSize = 4.8 MB
         peakTimeSpent = 226.000 ms
         totalTimeSpent = 8.366 s
        }

         805 <Event name="CompilerStatistics" category="Java Virtual Machine, Compiler" label="Compiler Statistics" thread="false" period="everyChunk" startTime="false">
         806 <Field type="int" name="compileCount" label="Compiled Methods" />
         807 <Field type="int" name="bailoutCount" label="Bailouts" />
         808 <Field type="int" name="invalidatedCount" label="Invalidated Compilations" />
         809 <Field type="int" name="osrCompileCount" label="OSR Compilations" />
         810 <Field type="int" name="standardCompileCount" label="Standard Compilations" />
         811 <Field type="ulong" contentType="bytes" name="osrBytesCompiled" label="OSR Bytes Compiled" />
         812 <Field type="ulong" contentType="bytes" name="standardBytesCompiled" label="Standard Bytes Compiled" />
         813 <Field type="ulong" contentType="bytes" name="nmetodsSize" label="Compilation Resulting Size" />
         814 <Field type="ulong" contentType="bytes" name="nmetodCodeSize" label="Compilation Resulting Code Size" />
         815 <Field type="long" contentType="millis" name="peakTimeSpent" label="Peak Time" />
         816 <Field type="long" contentType="millis" name="totalTimeSpent" label="Total time" />
         817 </Event>

              Assignee:
              Eric Caspole
              Reporter:
              Eric Caspole
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: