8233075: JFR - nmetods - misspelled in several places

Reviewed-by: hseigel, mseledtsov